--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,12 @@ env:
   - PANDAS_VERSION=0.13.0
   - PANDAS_VERSION=0.12.0
 before_install:
-- sudo apt-get update -qq
-- sudo apt-get install -qq r-base
-- ./tests/data/load_fixtures.R
+  - gpg --keyserver keyserver.ubuntu.com --recv-key E084DAB9
+  - gpg -a --export E084DAB9 | sudo apt-key add -
+  - sudo echo "deb http://cran.rstudio.com/bin/linux/ubuntu xenial/" | sudo tee -a /etc/apt/sources.list
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq r-base
+  - ./tests/data/load_fixtures.R
 # command to install dependencies
 install:
   - pip install -q pandas==$PANDAS_VERSION
